--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+</head>
+
+<body>
     ― Hello World! &#x1F609;
-  </body>
+</body>
+
 </html>
