--- a/index.html
+++ b/index.html
@@ -65,17 +65,111 @@
                     </div>
                     <div class="row">
                         <div class="ten wide column">
-                            <!-- Experience -->
+                            <h3>Experience</h3>
+                            <ul class="timeline">
+                                <li>
+                                    <p><small>2018</small></p>
+                                    <p>Amongst many fighters of the past was featured in the movie "Ready Player One". Ryu ready always!</p>
+                                </li>
+                                <li>
+                                    <p><small>2017</small></p>
+                                    <p>United with unknown until then to me Power Rangers to defea resurrected M.Bison.Damn good fighters they are, even not knowing karate ways!</p>
+                                </li>
+                                <li>
+                                    <p><small>2014</small></p>
+                                    <p>Filmed in a martial arts tutorial "Street Fighter: Assassin's Fist", revealing to audience forgotten art of Ansatsuken.</p>
+                                </li>
+                                <li>
+                                    <p><small>2012</small></p>
+                                    <p>The gods of intenet concluded me in the animated movie "Wreck-It Ralph", but rewarded me with a good drink for it!</p>
+                                </li>
+                                <li>
+                                    <p><small>2008</small></p>
+                                    <p>My evil alter ego sneaked out of control and became a boss in "Street Fighter IV".</p>
+                                </li>
+                                <li>
+                                    <p><small>2006</small></p>
+                                    <p>Borrowed my famous ripped gi to Soki in "Onimusha: Dawn of Dreams", gods informed me he needed that for the battle.</p>
+                                </li>
+                                <li>
+                                    <p><small>1998</small></p>
+                                    <p>Defeated M. Bison in "Street Fighter Alpha 2", bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel universe in "Marvel vs. Capcom: Clash of Super
+                                        Heroes" fighter,loyal to my employer, Capcom, of course.</p>
+                                </li>
+                                <li>
+                                    <p><small>1997</small></p>
+                                    <p>Reunited with Ken, my friend and opponent in "Street Fighter III". Men's friendship works mysteriously. Also helped with Arika project "Street Fighter EX"</p>
+                                </li>
+                                <li>
+                                    <p><small>1996</small></p>
+                                    <p>Took care of villainous Akuma in "Street Fighter Alpha 2". As a freelance on "Super Puzzle Fighter II Turbo" tried myself in a new genre, puzzle games. Let the wrath of seven heavens come upon these malicious enigmas,
+                                        never again!</p>
+                                </li>
+                                <li>
+                                    <p><small>1995</small></p>
+                                    <p>Kept fighting in "Street Fighter Alpha: Warriors' Dreams".</p>
+                                </li>
+                                <li>
+                                    <p><small>1994</small></p>
+                                    <p>Screened in a movie "Street Fighter", so that the batllesof past would not be forgotten by millenial generation.</p>
+                                </li>
+                                <li>
+                                    <p><small>1991</small></p>
+                                    <p>Was promoted to "Street Fighter II". Didn't stay there for long, celebrations and office dwelling is not for me!</p>
+                                </li>
+                                <li>
+                                    <p><small>1987</small></p>
+                                    <p>Started working for Capcom project "Street Fighter". My partner was Ken Masters, the boss'name was Sagat.</p>
+                                </li>
+                            </ul>
+                            <h3>PUBLICATIONS</h6>
+                                <ul class="timeline">
+                                    <li>
+                                        <p><small>2011</small></p>
+                                        <p>The true and humble story of me under pseudonim Tyler Wilde in an article "The evolution of Ken and Ryu"</p>
+                                    </li>
+                                    <li>
+                                        <p><small>2003-2018 </small></p>
+                                        <p>For 15 years I have published comic books with Udon Entertainment depicting my adventures, bitter lessons and great victories.</p>
+                                    </li>
+                                </ul>
                         </div>
                         <div class="six wide column">
-                            <!-- Languages -->
-                            <!-- Skills -->
-                            <!-- Character -->
-                            <!-- Likes -->
-                            <!-- Dislikes -->
-                            <!-- Wants -->
-                            <!-- Education -->
-                            <!-- Articles -->
+                            <p class="tags small">
+                                <span class="language">&#x1f1fa;&#x1f1f8; ENGLISH</span>
+                                <span class="language">&#x1F1E8;&#x1F1F3; <span>MANDARIN</span></span>
+                                <span class="language">&#x1F1EF;&#x1F1F5; <span>JAPANESE</span></span>
+                            </p>
+                            <h3>Skills</h3>
+                            <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS</p>
+                            </section>
+                            <section>
+                                <h3>Education</h3>
+                                <p class="tags small">To live is to fight and to fight is to live. I started learning fighting at my master Gouken's castle, I was beaten at head way too often to remember when exactly.
+                                </p>
+                            </section>
+                            <section>
+                                <h3>Character</h3>
+                                <p class="tags small">NOBLE DIRECT BOLD CONFIDENT DARING SCHIZOPHRENIC DRAMATIC PERSUASIVE IMMEDIATE WISE
+                                </p>
+                            </section>
+                            <section>
+                                <h3>LIKES 😃</h3>
+                                <p class="tags small">GI VEGETABLES BLOOD SMALL MARSHMELLOWS RED COLOR KILLED ENEMY</p>
+                            </section>
+                            <section>
+                                <h3>DISLIKES 😞</h3>
+                                <p class="tags small">BISONS GHOSTS SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES</p>
+                            </section>
+                            <section>
+                                <h3>WANTS 🥺</h3>
+                                <p class="tags small">BE FIT WRITE MORE BOOKS FIND A GIRLFRIEND TO GO TO CINEMA WITH KILL ALL OF AKUMA FAMILY
+                                </p>
+                            </section>
+                            <section>
+                                <h3>LIFE LESSON</h3>
+                                <p>You must defeat Sheng Long to stand a chance.</p>
+                            </section>
                         </div>
                     </div>
                 </div>
