--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
                         <div class="thirteen wide column">
                             <div class="stackable grid">
                                 <div class="sixteen wide column">
-                                    <!-- Name, job, contacts -->
-                                </div>
-                                <div class="sixteen wide mobile only column">
-                                    <div class="divider"></div>
-                                </div>
-                                <div class="sixteen wide column">
                                     <h1 class="name">Ryu Hoshi (リュウ Ryū)</h1>
                                     <div class="job">Face destroyer</div>
                                     <ul class="contacts">
@@ -53,6 +47,12 @@
                                             </a>
                                         </li>
                                     </ul>
+                                </div>
+                                <div class="sixteen wide mobile only column">
+                                    <div class="divider"></div>
+                                </div>
+                                <div class="sixteen wide column">
+
                                     <p>― I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.</p>
                                 </div>
                             </div>
@@ -135,13 +135,17 @@
                                 </ul>
                         </div>
                         <div class="six wide column">
-                            <p class="tags small">
-                                <span class="language">&#x1f1fa;&#x1f1f8; ENGLISH</span>
-                                <span class="language">&#x1F1E8;&#x1F1F3; <span>MANDARIN</span></span>
-                                <span class="language">&#x1F1EF;&#x1F1F5; <span>JAPANESE</span></span>
-                            </p>
-                            <h3>Skills</h3>
-                            <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS</p>
+                            <section>
+                                <h3>Language</h3>
+                                <p class="tags small">
+                                    <span class="language">&#x1f1fa;&#x1f1f8; ENGLISH</span>
+                                    <span class="language">&#x1F1E8;&#x1F1F3; <span>MANDARIN</span></span>
+                                    <span class="language">&#x1F1EF;&#x1F1F5; <span>JAPANESE</span></span>
+                                </p>
+                            </section>
+                            <section>
+                                <h3>Skills</h3>
+                                <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS</p>
                             </section>
                             <section>
                                 <h3>Education</h3>
