--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <div class="stackable grid">
                     <div class="row">
                         <div class="three wide center aligned column">
-                            <!-- Avatar -->
+                            <div class="avatar-wrapper">
+                                <img src=".img/avatar.gif" alt="Avatar">
+                            </div>
                         </div>
                         <div class="thirteen wide column">
                             <div class="stackable grid">
