--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Résumé</title>
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
                     <div class="row">
                         <div class="three wide center aligned column">
                             <div class="avatar-wrapper">
-                                <img src=".img/avatar.gif" alt="Avatar">
+                                <img class="avatar" src="img/avatar.gif" alt="Avatar">
                             </div>
                         </div>
                         <div class="thirteen wide column">
